# depsync

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
.github/scripts/: update-toml-sort.sh
.github/workflows/: release.yml  update-toml-sort.yml
depsync/: cli.py  deps_bumper.py
fmttoml/: cli.py  formatter.py  linter.py  utils.py
fmttoml/hooks/: run.py
