[project]
name = "fmttoml"
version = "0.1.0"
authors = [{name = "Hossain Mahmud", email = "hossain.mahmud@gmail.com"}]
dependencies = ["tomlkit"]
description = "Formatter for TOML files that enforces operator spacing."
requires-python = ">=3.7"

[project.scripts]
fmttoml = "fmttoml.cli:main"
run = "fmttoml.cli:run"

[tool.ruff]
exclude = []
indent-width = 4
line-length = 100
target-version = "py312"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["ALL"]
ignore = []
select = ["E4", "E7", "E9", "F", "I"]
unfixable = ["F401"] # F401: don't fix unused imports

[tool.ruff.lint.isort]
length-sort = true
length-sort-straight = true
